Changes for 3.3.0

New features:
..F.I..... [ZBXNEXT-3679] implemented a new design for Dashboard page (Pavel, Sasha)
....I..PS. [ZBXNEXT-3386] added IPMI manager and reworked IPMI pollers to avoid connecting to one host from multiple pollers (wiper)
..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)
..FGI..... [ZBXNEXT-491] added vfs.dir.size[dir,<regex_incl>,<regex_excl>,<mode>,<max_depth>] check (vjaceslavs, Andris)
...G....S. [ZBXNEXT-1380] added check for exit code of scripts (vjaceslavs)
A......... [ZBX-3783] deprecated mappings.sortorder parameter by iconmap.create() and iconmap.update() methods (Sasha)
A.F.I..PS. [ZBXNEXT-1443] added item pre-processing options (wiper, Ivo)
..F....... [ZBXNEXT-830] implemented full clone of maps (Cemeris, Sasha)
...G...... [ZBXNEXT-12] added support of CIDR subnet mask notations for Server option on agent config (vso)
A.F....PS. [ZBXNEXT-12] added support of CIDR subnet mask notations for Allowed hosts of trapper items (Sasha, vso)
A.F....PS. [ZBXNEXT-3576] increased user media periods and item flexible intervals to 1024 characters (Sasha, wiper)
A......... [ZBX-3783] added support of user_medias parameter by user.update() method (Sasha)
A......... [ZBX-3783] prohibited deleting users and user groups which are used in actions (Sasha)
A......... [ZBX-3783] deprecated user.addmedia(), user.updatemedia(), user.deletemedia(), user.updateprofile(), usergroup.massadd(), usergroup.massupdate() and usermedia.get() API methods (Sasha)
.......PS. [ZBXNEXT-1804] reduced the number of connections required for proxy-server data exchange by adding new 'proxy data' request and increasing the size of data sent (wiper)
........S. [ZBXNEXT-3086] improved performance of action condition evaluation by ensuring that equivalent conditions are only checked once, thus there will be less queries to database (vso)