@@ -564,9 +564,9 @@ FIELD		|snmptrap_logging|t_integer	|'1'	|NOT NULL	|ZBX_PROXY,ZBX_NODATA
 FIELD		|server_check_interval|t_integer|'10'	|NOT NULL	|ZBX_NODATA
 FIELD		|hk_events_mode	|t_integer	|'1'	|NOT NULL	|ZBX_NODATA
 FIELD		|hk_events_trigger|t_integer	|'365'	|NOT NULL	|ZBX_NODATA
-FIELD		|hk_events_internal|t_integer	|'365'	|NOT NULL	|ZBX_NODATA
-FIELD		|hk_events_discovery|t_integer	|'365'	|NOT NULL	|ZBX_NODATA
-FIELD		|hk_events_autoreg|t_integer	|'365'	|NOT NULL	|ZBX_NODATA
+FIELD		|hk_events_internal|t_integer	|'1'	|NOT NULL	|ZBX_NODATA
+FIELD		|hk_events_discovery|t_integer	|'1'	|NOT NULL	|ZBX_NODATA
+FIELD		|hk_events_autoreg|t_integer	|'1'	|NOT NULL	|ZBX_NODATA
 FIELD		|hk_services_mode|t_integer	|'1'	|NOT NULL	|ZBX_NODATA
 FIELD		|hk_services	|t_integer	|'365'	|NOT NULL	|ZBX_NODATA
 FIELD		|hk_audit_mode	|t_integer	|'1'	|NOT NULL	|ZBX_NODATA
@@ -1455,4 +1455,4 @@ INDEX		|1		|itemid,step
 TABLE|dbversion||
 FIELD		|mandatory	|t_integer	|'0'	|NOT NULL	|
 FIELD		|optional	|t_integer	|'0'	|NOT NULL	|
-ROW		|3030022	|3030023
+ROW		|3030026	|3030026
