@@ -1,6 +1,7 @@
 Changes for 3.3.0
 
 New features:
+....I..PS. [ZBXNEXT-3568] decreased internal, discovery and auto registration default data storage period to 1 day (vso)
 ..F.I..... [ZBXNEXT-3679] implemented a new design for Dashboard page (Pavel, Sasha)
 ....I..PS. [ZBXNEXT-3386] added IPMI manager and reworked IPMI pollers to avoid connecting to one host from multiple pollers (wiper)
 ..F.....S. [ZBXNEXT-3572] added option to control amount of queued items (vjaceslavs)
